# AK_lab4

./: README.md
calculator/: CMakeLists.txt  Makefile  test.sh
calculator/include/: calculator.h
calculator/src/: ScienceCalculator.cpp  main.cpp
